<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4">

    <TextView

        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_column="0"
        android:textSize="30dp"
        android:text="@string/widgets"
        >

    </TextView>
    <Button
        android:layout_column="0"
        android:layout_width="150dp"
        android:layout_row="1"
        android:text="@string/Button"
        android:layout_gravity="fill_horizontal"
        >
    </Button>

    <ImageButton
        android:layout_gravity="fill"
        android:layout_column="1"
        android:layout_height="65dp"
        android:scaleType="fitCenter"


        android:src="@drawable/flag">

    </ImageButton>

    <CheckBox
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/check">
    </CheckBox>

    <Switch
        android:layout_column="1"
        android:layout_row="2"
        android:layout_gravity="fill"
        android:text="@string/switch_cap">

    </Switch>
    <EditText
        android:hint="@string/text_hint"
        android:inputType="textPersonName|textCapWords"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal">

    </EditText>
    </GridLayout>

